--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,8 @@
 html, body {
     font-family: "Nunito Sans", sans-serif!important;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: normal;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100,
-    "YTLC" 500;
 }
 
 .logo {
