--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,18 +30,17 @@
 </head>
 
 <body class="site">
-  <header class="header ">
+  <header class="header">
     <div class="container">
       <div class="grid">
         <div class="grid__item grid__item--one-third ">
-          <h1 class="logo"><img src="{{ '/assets/images/io-logo-black.svg' | relative_url }}" width="300" alt="Inside Out Service Design" /></h1>
+          <h1 class="logo"><a href="/"><img src="{{ '/assets/images/io-logo-white.svg' | relative_url }}" width="200" alt="Inside Out Service Design" /></a></h1>
         </div>
         <div class="grid__item grid__item--two-thirds ">
           <nav class="nav">
             <ul class="nav__list">
-              <li class="nav__item"><a class="nav__link" href="/">Home</a></li>
+              <li class="nav__item"><a class="nav__link" href="/workshop">Workshop</a></li>
               <li class="nav__item"><a class="nav__link" href="/blog">Blog</a></li>
-              <li class="nav__item"><a class="nav__link" href="/workshops">Workshops</a></li>
               <li class="nav__item"><a class="nav__link" href="/about">About</a></li>
             </ul>
           </nav>
@@ -60,6 +59,7 @@
         <p class="footer__text">&copy; {{ site.time | date: '%Y' }} Inside Out</p>
       </div>
     </div>
+   
   </footer>
 </body>
 
